--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
    
 }
 .navbar-wrapper{
-    background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 100%);
+     background: linear-gradient(180.00deg, rgb(12, 11, 11),rgb(25, 23, 23) 100%); 
+    
     width: -30%;
 }
 .home {
@@ -83,6 +84,7 @@ width: max-content;
  left: 1107px;
 top: 260px;
 align-items: center;
+color:white;
 
 }
 .round{
@@ -95,16 +97,21 @@ align-items: center;
     border-radius:20px;
     left:830px;
     bottom:100px;
+    color: white;
 }
 .Change-Your-Habits{
     background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 100%);
     align-items: center;
     margin-left:90px;
     margin-right: 70px;
+    color: white;
+    border-color: black;
 
 }
 .movement {
  display:flex;
+ /* justify-content: space-between; */
+  align-items: center; 
   /* background: rgb(0, 0, 0); */
   background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 100%);
   
@@ -117,4 +124,97 @@ color: rgba(255, 255, 255, 0.5);}
 
 .movement img{
     border-radius: 50%;
+   
 }
+.run-an-extra {
+    margin-top: 50px;
+    border: 2px solid green;
+    height: 300px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+     /* margin-left:70px; */
+     margin-right: 50px; 
+    border-radius: 18px;
+background: rgb(34, 34, 34);
+
+}
+.run-an-extra-child{
+    width: 45%;
+    /* border: 2px solid blueviolet; */
+    margin-left: 40px; 
+   
+   
+}
+.run-an-extra-child img{
+    border-radius: 18px;
+    /* align-items: center; */
+    /* /* margin-left:90px; */
+    /* margin-right: 60px; 
+    right:30%; */
+
+/* left: 662px;
+top: 30px; */
+    width: 60%;
+    /* margin-right: 30px; */
+    height: 70%;
+    object-fit: cover;
+}
+.Run{color: white;
+    font-size: 40px;
+    font-weight:900;
+    font-family: "Inter", sans-serif;
+}
+.meet-our-team{
+    color: white;
+
+}
+.trainer-1{
+    position: relative;
+}
+.trainer-1-text{
+    position: absolute;
+    top:77%;
+    padding:15px;
+
+}
+.trainer-1 img{
+    width: 100%;
+    height:100%;
+    border-radius: 10px;
+    object-fit: cover;
+   
+}
+.meet-our-team-child{
+    margin-left: 50px;
+    margin-right: 50px;
+   
+
+}
+.meet-our-team{
+    background-color:rgb(34, 34, 34);
+    margin-left:20px;
+    margin-right: 20px;
+    margin-top:20px;
+  display: grid;
+  grid-template-columns: repeat(3,2fr);
+  gap:20px; 
+}
+.last-section{
+    background-color:rgb(34, 34, 34);
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+margin-right: 15px;
+}
+hr.solid {
+    border-top: 2px	
+    rgba(255, 255, 255, 0.1);
+
+  }
+  .devider{
+    margin: 0 auto;
+    width:170%;
+    margin-left: 60%;
+    text-align: center;
+  }
