--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+@import url('https://fonts.cdnfonts.com/css/miama');  
 .fitness{
     display: flex;
     justify-content: space-between;
@@ -17,7 +20,6 @@ padding: 7px;
 gap: 15px;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 
 .fitness-area{
@@ -30,12 +32,11 @@ gap: 15px;
  left:30%;
  margin-left: 80px;
 }
-.nav-hamburger-menu{
+.nav-hamburgur-menu{
+  display: none;
 
 }
-/* .fitness > div{
-    margin-top: 20px; */
-
+.
 
 .main-content{
     max-width: 1440px;
@@ -43,22 +44,28 @@ gap: 15px;
     height:715px;
     border:2px solid red
 }
-       @import url('https://fonts.cdnfonts.com/css/miama');        
+            
 
 .shape {
     font-family: "Miama", sans-serif;
                                                 
   }
- .banner-childs img{
+ /* .banner-childs img{
     width: 349px;
   height: 580px;
   left: 877px;
     bottom:32px;
-    position: absolute;
+    position: absolute; }*/
+    .image-1{
+      position abolute;
+      width:40%;
+      margin-left: 10%;
+    }
 
- } 
+ 
  .banner-main{
     display: flex;
+    /* justify-content: space-between; */
     align-items: center;
     /* background-color: rgb(17, 17, 17)
     rgba(119, 119, 119, 0);
@@ -76,36 +83,37 @@ gap: 15px;
      margin-left: 80px;
 }
 .section-500{
-    border: 1px solid rgba(255, 255, 255, 0.18);
-    border-radius: 12px;
-  background: rgba(255, 255, 255, 0.258);
-  position: absolute;
-width: max-content;
- left: 1107px;
-top: 260px;
-align-items: center;
-color:white;
-
+  box-sizing: border-box;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 12px;
+  backdrop-filter: blur(20px);
+  background: rgba(255, 255, 255, 0.1);
 }
 .round{
     color:red
 }
 .div-350{
     padding: 10px;
-    border: 1px solid rgba(66, 57, 57, 0.731);
+    background: rgba(48, 48, 48, 0.54);
     position: absolute;
     border-radius:20px;
     left:830px;
     bottom:100px;
     color: white;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+border-radius: 12px;
+backdrop-filter: blur(20px);
 }
 .Change-Your-Habits{
-    background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 100%);
+    /* background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 100%); */
+    background-color: black;
+    
     align-items: center;
     margin-left:90px;
-    margin-right: 70px;
+    margin-right: 70px; 
     color: white;
     border-color: black;
+    
 
 }
 .movement {
@@ -113,9 +121,10 @@ color:white;
  /* justify-content: space-between; */
   align-items: center; 
   /* background: rgb(0, 0, 0); */
-  background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 100%);
+  /* background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 100%); */
   
-}
+} 
+
 .description{
  font-family: "Inter", sans-serif; 
 font-weight: 400;
@@ -128,8 +137,8 @@ color: rgba(255, 255, 255, 0.5);}
 }
 .run-an-extra {
     margin-top: 50px;
-    border: 2px solid green;
-    height: 300px;
+    
+    /* height: 300px; */
 
     display: flex;
     justify-content: space-between;
@@ -141,7 +150,7 @@ background: rgb(34, 34, 34);
 
 }
 .run-an-extra-child{
-    width: 45%;
+    width: 50%;
     /* border: 2px solid blueviolet; */
     margin-left: 40px; 
    
@@ -156,9 +165,9 @@ background: rgb(34, 34, 34);
 
 /* left: 662px;
 top: 30px; */
-    width: 60%;
-    /* margin-right: 30px; */
-    height: 70%;
+    width: 95%;
+    /* margin-right: 20px;  */
+    height: 100%;
     object-fit: cover;
 }
 .Run{color: white;
@@ -197,9 +206,18 @@ top: 30px; */
     margin-left:20px;
     margin-right: 20px;
     margin-top:20px;
+    /* display: grid;
+  grid-template-columns: repeat(3,2fr);
+  gap:20px; */
+  
+}
+.meet-our-team-mid{
   display: grid;
   grid-template-columns: repeat(3,2fr);
-  gap:20px; 
+   gap:15px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .last-section{
     background-color:rgb(34, 34, 34);
@@ -218,3 +236,33 @@ hr.solid {
     margin-left: 60%;
     text-align: center;
   }
+  .bmi-calculator{
+    background-color: black;
+    
+  }
+  .full-cal-chart{
+    display: flex;
+     justify-content: space-between; 
+    background-color:rgb(34, 34, 34) ;
+  }
+  .table,th,td{
+    border: 1px solid rgba(255, 255, 255, 0.1);
+  }
+  .bmi-child{
+width: 50%;
+  }
+  .bmi-parent{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0;
+  }
+  .bmi-parent input,textarea,select{
+    /* width:100%; */
+    border-radius: 8px;
+ background: rgba(255, 255, 255, 0.1);
+  }
+  .bmi-child-text{
+    width: 100%;
+
+  }
+  
