--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ gap: 15px;
   display: none;
 
 }
-.
+
 
 .main-content{
     max-width: 1440px;
@@ -57,7 +57,7 @@ gap: 15px;
     bottom:32px;
     position: absolute; }*/
     .image-1{
-      position abolute;
+      /* position:absolute; */
       width:40%;
       margin-left: 10%;
     }
@@ -223,7 +223,7 @@ top: 30px; */
     background-color:rgb(34, 34, 34);
     display: grid;
     grid-template-columns: repeat(3,1fr);
-margin-right: 15px;
+ margin-right: 15px; 
 }
 hr.solid {
     border-top: 2px	
@@ -265,4 +265,15 @@ width: 50%;
     width: 100%;
 
   }
+  .diet-imges{
+    display: flex;
+    /* grid-template-columns: repeat(2,1fr); */
+    justify-content: space-between;
+  }
+  .diet-imges img{
+    width:100%;
+    height:100%;
+  }
+  
+  
   
