--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ gap: 15px;
 .main-content{
     max-width: 1440px;
     margin:0 auto;
-    height:715px;
+    /* height:715px; */
     border:2px solid red
 }
             
@@ -50,16 +50,11 @@ gap: 15px;
     font-family: "Miama", sans-serif;
                                                 
   }
- /* .banner-childs img{
-    width: 349px;
-  height: 580px;
-  left: 877px;
-    bottom:32px;
-    position: absolute; }*/
+ 
     .image-1{
-      /* position:absolute; */
+      position: relative;
       width:40%;
-      margin-left: 10%;
+      margin-left: 40%;
     }
 
  
@@ -82,27 +77,38 @@ gap: 15px;
      align-items: center;
      margin-left: 80px;
 }
+
 .section-500{
-  box-sizing: border-box;
+ position: absolute;
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 12px;
   backdrop-filter: blur(20px);
   background: rgba(255, 255, 255, 0.1);
+  z-index:2;
+  bottom: 55%;
+  left:110%;
+  width: 193px;
+height: 98px;
+text-align: center;
+color: white;
+   
 }
-.round{
-    color:red
-}
-.div-350{
-    padding: 10px;
-    background: rgba(48, 48, 48, 0.54);
-    position: absolute;
-    border-radius:20px;
-    left:830px;
-    bottom:100px;
-    color: white;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-border-radius: 12px;
-backdrop-filter: blur(20px);
+
+.section-350{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0.1);
+  width: 193px;
+  height: 98px;
+  text-align:center; 
+  bottom:10%;
+  left:10%;
+  border-radius: 12px;
+  color: white;
+
 }
 .Change-Your-Habits{
     /* background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 100%); */
@@ -158,13 +164,7 @@ background: rgb(34, 34, 34);
 }
 .run-an-extra-child img{
     border-radius: 18px;
-    /* align-items: center; */
-    /* /* margin-left:90px; */
-    /* margin-right: 60px; 
-    right:30%; */
-
-/* left: 662px;
-top: 30px; */
+   
     width: 95%;
     /* margin-right: 20px;  */
     height: 100%;
@@ -179,46 +179,16 @@ top: 30px; */
     color: white;
 
 }
-.trainer-1{
-    position: relative;
-}
-.trainer-1-text{
-    position: absolute;
-    top:77%;
-    padding:15px;
 
-}
-.trainer-1 img{
-    width: 100%;
-    height:100%;
-    border-radius: 10px;
-    object-fit: cover;
-   
-}
-.meet-our-team-child{
-    margin-left: 50px;
-    margin-right: 50px;
-   
-
-}
 .meet-our-team{
-    background-color:rgb(34, 34, 34);
+     background-color:rgb(34, 34, 34); 
     margin-left:20px;
     margin-right: 20px;
     margin-top:20px;
-    /* display: grid;
-  grid-template-columns: repeat(3,2fr);
-  gap:20px; */
+    
   
 }
-.meet-our-team-mid{
-  display: grid;
-  grid-template-columns: repeat(3,2fr);
-   gap:15px;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+
 .last-section{
     background-color:rgb(34, 34, 34);
     display: grid;
@@ -227,7 +197,7 @@ top: 30px; */
 }
 hr.solid {
     border-top: 2px	
-    rgba(255, 255, 255, 0.1);
+     rgba(255, 255, 255, 0.1); 
 
   }
   .devider{
@@ -239,41 +209,83 @@ hr.solid {
   .bmi-calculator{
     background-color: black;
     
+    
   }
   .full-cal-chart{
     display: flex;
      justify-content: space-between; 
     background-color:rgb(34, 34, 34) ;
+    
+  }
+  .chart{
+    margin-left:10% ;
   }
   .table,th,td{
     border: 1px solid rgba(255, 255, 255, 0.1);
   }
   .bmi-child{
 width: 50%;
+
+
   }
   .bmi-parent{
     display: flex;
-    flex-wrap: wrap;
-    gap: 0;
+    /* flex-wrap: wrap;  */
+    /* box-sizing: content-box; */
   }
   .bmi-parent input,textarea,select{
-    /* width:100%; */
-    border-radius: 8px;
+    
+    border-radius: 5px;
+    padding: 12px 40px 12px 20px;
+    gap:10;
  background: rgba(255, 255, 255, 0.1);
+ 
   }
   .bmi-child-text{
     width: 100%;
+    color: rgba(255, 255, 255, 0.6);
 
   }
   .diet-imges{
     display: flex;
-    /* grid-template-columns: repeat(2,1fr); */
-    justify-content: space-between;
+   
+    justify-content: space-evenly;
   }
   .diet-imges img{
     width:100%;
-    height:100%;
+    /* height:100%; */
   }
-  
+  .exercixe{
+    margin: 0 auto;
+}
+
+.container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    background-color:rgb(34, 34, 34);
+    gap: 10px;; 
+}
+.child {
+    width: 100%;
+    height: 300px;
+    position: relative;
+    margin-left: 25px;
+    margin-top: 25px;
+    margin-bottom: 20px;
+}
+.trainer-text{
+    position: absolute;
+    bottom: 5%;
+    left: 5%;
+}
+.child img{
+    width: 90%;
+    height: 300px;
+    border-radius: 10px;    
+}
+.image-all{
+  position: relative;
+
+}
   
   
